project setted up design started

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,14 +1,5 @@
-<footer class="{{ 'fixed' if path == 'home' }}">
-  <small class=""
-    >Copyright © {{settings.name}} 2020. Made with ❤ by
-    <a href="{{settings.url}}" target="_blank" class="">{{settings.author}}</a>
-    •
-    <a
-      href="https://github.com/surjithctly/neat-starter"
-      class=""
-      target="_blank"
-      rel="noopener"
-      >View on Github</a
-    >
-  </small>
-</footer>
+<div class="footer__conatiner">
+  <footer class="footer__footer">
+    <small class="footer__text">Copyright © Light Positive Kft. 2022.</small>
+  </footer>
+</div>
