--- a/src/_includes/posts_festival.html
+++ b/src/_includes/posts_festival.html
@@ -1,17 +1,11 @@
 ---
 layout: default
-prism: true
+title: FESZTIVÁLOK – KONCERTEK
 ---
 
 <div class="">
   <div class="">
     <h1 class="">{{title}}</h1>
-    <p class="">
-      <time>
-        {{ date | readableDate }} by
-        <a>{{ author }}</a>
-      </time>
-    </p>
   </div>
   <article class="">{{ content | safe }}</article>
 </div>
