--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -2,17 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover"
+    />
     <title>{{title}}</title>
     {% if description %}
     <meta name="description" content="{{description}}" />
-    {% endif %} {% block head %}{% endblock %}
+    {% endif %} {% block head %} {% endblock %}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
   </head>
   <body>
-    {% include "./partials/navbar.html" %} {{ content | safe }} {% include
-    "./partials/footer.html" %}
+    <div class="content__body">
+      {% include "./partials/navbar.html" %}
+      <div class="content__conatainer">{{ content | safe }}</div>
+      {% include "./partials/footer.html" %}
+    </div>
 
     <script src="/static/js/alpine.js"></script>
 
