--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,57 +1,37 @@
-<div class="{{ 'lg:fixed' if path == 'home' }}">
-  <nav
-    class=""
-    x-data="{ isOpen: false }"
-    @keydown.escape="isOpen = false"
-    @click.away="isOpen = false"
-  >
-    <!--Logo etc-->
-    <div class="">
-      <a href="/" class=""> Logo</a>
+<div class="nav__container">
+  <nav class="nav__nav">
+    <div class="nav__logo-warper">
+      <a href="/" class="nav-logo-link">
+        <img src="/static/img/logo-home-1.png" alt="" class="nav__logo-img" />
+      </a>
     </div>
 
-    <!--Toggle button (hidden on large screens)-->
-    <button
-      @click="isOpen = !isOpen"
-      type="button"
-      class=""
-      :class="{ 'transition transform-180': isOpen }"
-      aria-label="Menu"
-    >
-      <svg class="" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
-        <path
-          x-show="isOpen"
-          fill-rule="evenodd"
-          clip-rule="evenodd"
-          d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z"
-        />
-        <path
-          x-show="!isOpen"
-          fill-rule="evenodd"
-          d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"
-        />
-      </svg>
-    </button>
-
     <!--Menu-->
-    <div
-      class=""
-      :class="{ 'block shadow-3xl': isOpen, 'hidden': !isOpen }"
-      x-show.transition="true"
-    >
-      {% if navigation.items %}
-
-      <ul class="">
-        {% for item in navigation.items %}
-        <li class="nav__item mr-3">
-          <a @click="isOpen = false" class="" href="{{ item.url }}"
-            >{{ item.text }}</a
-          >
+    <div class="nav__list-conatiner">
+      <ul class="nav__list">
+        <li class="nav__list-item">
+          <a class="nav__list-link" href="/">Kezdőlap</a>
         </li>
-        {% endfor %}
+        <li class="nav__list-item">
+          <a class="nav__list-link" href="/aboutus">Rólunk</a>
+        </li>
+        <li class="nav__list-item">
+          <a class="nav__list-link" href="/references">Referenciák</a>
+        </li>
+        <li class="nav__list-item">
+          <a class="nav__list-link" href="/contact">Kapcsolat</a>
+        </li>
       </ul>
-
-      {% endif %}
+    </div>
+    <!--Toggle button (hidden on large screens)-->
+    <div class="nav-menu__conteiner">
+      <button type="button" class="nav__button">
+        <img
+          src="/static/img/burger_menu.svg"
+          class="nav__button-image"
+          alt="Menu"
+        />
+      </button>
     </div>
   </nav>
 </div>
