--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -90,6 +90,7 @@ html {
 body {
   margin: 0;
   background-color: var(--bg-mid);
+  overflow-x: hidden;
 }
 
 button,
@@ -328,105 +329,203 @@ form > * {
 
 .contact__body {
   display: flex;
-  justify-content: center;
 }
 .contact__content {
   max-width: 128rem;
   margin: auto;
-  padding-top: 3vh;
 }
 
 .contact__heading {
-  padding: 0;
+  padding: 3rem 0;
+  text-align: center;
+}
+.contact__block1 {
+  padding: 4rem 0;
+  max-width: 128rem;
   display: flex;
-  justify-content: center;
+  margin: auto;
+  flex-wrap: nowrap;
 }
-.contact-block1 {
-  display: flex;
-  justify-content: space-around;
-}
-.form__body {
-  padding-top: 3vh;
-  display: flex;
-  justify-content: center;
-}
-.form__container {
-}
-.form__name {
-}
-.form__email {
-}
-.form__subject {
-}
-.form__message {
-}
-.form__submit {
-}
-.map__boody {
-  padding-top: 3vh;
-  display: flex;
-  justify-content: center;
-}
-.map__container {
-}
-.map__container > iframe {
-  width: 70vw;
-  max-width: 45rem;
+.contact__block1 > * {
+  margin: auto;
 }
 .contact__block2 {
+  padding: 4rem 0;
+  max-width: 128rem;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  margin: auto;
+  flex-wrap: nowrap;
 }
+.contact__block2 > * {
+  margin: auto;
+}
+.form__body {
+  flex-basis: 40rem;
+  min-height: 40rem;
+  padding: 0 3rem;
+  height: fit-content;
+}
+.form__container {
+  box-sizing: content-box;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: 40rem;
+}
+.form__label {
+  padding: 0.2rem 0;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: block;
+  color: var(--font-grey);
+}
+.form__item {
+  padding: 0.5rem 0;
+  width: 100%;
+  height: fit-content;
+}
+.form__item > input {
+  height: 3rem;
+  width: 98%;
+}
+.form__item > *::placeholder {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  letter-spacing: -0.015em;
+  color: var(--font-dark-grey);
+}
+.form__item > input:focus,
+.form__item > input:active,
+.form__item > input::selection,
+#form__message--input:focus,
+#form__message--input:active,
+#form__message--input::selection {
+  outline-color: var(--font-orange) !important;
+  outline-style: solid !important;
+  border-style: solid !important;
+  outline-width: 2px;
+}
+#form__message--input {
+  font-family: "Open Sans", sans-serif;
+  min-height: 10rem;
+  resize: vertical;
+  display: block;
+  overflow: hidden;
+  background-color: var(--font-white);
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  letter-spacing: -0.015em;
+  width: 98%;
+}
+
+.form__submit {
+  padding: 2rem 0;
+}
+.form__submit > input {
+  all: unset;
+  width: 12rem;
+  height: 3rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2rem;
+  color: var(--font-white);
+  font-weight: 700;
+  background-color: var(--font-orange);
+  border: none;
+  border-radius: 1px;
+  text-align: center;
+  user-select: none;
+}
+
+.form__submit :hover {
+  color: var(--font-dark-grey);
+  transition: all 0.5s ease-out;
+  transform: scale(1.1);
+  filter: drop-shadow(0px 0px 6px var(--font-orange));
+}
+
+.map__boody {
+  padding: 0 3rem;
+  flex-basis: 40rem;
+}
+.map__container {
+  width: 100%;
+  height: 40rem;
+}
+.map__container > iframe {
+  width: 100%;
+  height: 100%;
+}
+.contact__card-conatainer {
+  margin: auto;
+  padding: 3rem 0;
+  max-width: 29rem;
+  width: 25vw;
+  padding: 0 3rem;
+}
+
+@media screen and (max-width: 700px) {
+  .contact__block2 {
+    flex-wrap: wrap;
+  }
+  .contact__block1 {
+    flex-wrap: wrap;
+  }
+  .contact__card-conatainer {
+    min-width: 30rem;
+    width: 25vw;
+  }
+}
+
 .contact__text-container {
   max-width: 128rem;
   margin: auto;
-  padding-top: 3vh;
+  padding-top: 2rem;
 }
 .contact__text-container--text {
   text-align: center;
-}
-.contact__text-container--text > p {
-  text-align: center;
+  padding: 0;
 }
 .card__img-wrapper {
 }
 .card__email {
   color: var(--font-orange);
-  text-align: center;
+  margin: 0.5rem 0;
 }
 
 .contact__spacer-container {
-  display: none;
   max-width: 128rem;
   display: flex;
   justify-content: center;
-  margin: 5vh auto;
+  margin: 1rem auto 5rem;
 }
 .contact__spacer {
-  display: none;
-  max-width: 100rem;
-  height: min-content;
-  width: 70rem;
+  height: 0.5rem;
+  width: 85%;
 }
-.contact__card-conatainer {
-  padding-bottom: 2rem;
-}
-.card__img-wrapper {
-  padding-top: 3vh;
-  display: flex;
-  justify-content: center;
-}
+
 .card__img {
   padding: 0;
-  width: 30rem;
+  width: 100%;
 }
 
 .card__heading {
+  text-align: center;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  padding-top: 2vh;
+  margin: 0;
+  padding-top: 3rem;
 }
 .card__text {
   text-align: center;
+  padding: 1rem 0;
+  margin: 0;
+}
+.card__text > p {
+  margin: 0.5rem 0;
 }
