some styling of posts

--- a/src/_includes/posts_festival.html
+++ b/src/_includes/posts_festival.html
@@ -3,9 +3,9 @@ layout: default
 title: FESZTIVÁLOK – KONCERTEK
 ---
 
-<div class="">
-  <div class="">
-    <h1 class="">{{title}}</h1>
+<div class="post__body">
+  <div class="post__content">
+    <h2 class="post__heading">{{title}}</h2>
   </div>
-  <article class="">{{ content | safe }}</article>
+  <article class="post__markdown">{{ content | safe }}</article>
 </div>
