--- a/src/_includes/posts_corporate.html
+++ b/src/_includes/posts_corporate.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 title: KONFERENCIÁK – TRÉNINGEK – VÁLLALATI RENDEZVÉNYEK
+<!-- kep: image -->
 ---
 
-<div class="">
-  <div class="">
-    <h1 class="">{{title}}</h1>
+<div class="post__body">
+  <div class="post__content">
+    <h2 class="post__heading">{{title}}</h2>
   </div>
-  <article class="">{{ content | safe }}</article>
+  <article class="post__markdown">{{ content | safe }}</article>
 </div>
