--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -25,13 +25,15 @@
     </div>
     <!--Toggle button (hidden on large screens)-->
     <div class="nav-menu__conteiner">
-      <button type="button" class="nav__button">
-        <img
-          src="/static/img/burger_menu.svg"
-          class="nav__button-image"
-          alt="Menu"
-        />
-      </button>
+      <a href="/">
+        <button type="button" class="nav__button">
+          <img
+            src="/static/img/burger_menu.svg"
+            class="nav__button-image"
+            alt="Menu"
+          />
+        </button>
+      </a>
     </div>
   </nav>
 </div>
