--- a/src/_includes/posts_festival.html
+++ b/src/_includes/posts_festival.html
@@ -1,11 +1,16 @@
 ---
 layout: default
-title: FESZTIVÁLOK – KONCERTEK
 ---
 
-<div class="post__body">
-  <div class="post__content">
-    <h2 class="post__heading">{{title}}</h2>
+<div class="posts__body">
+  <div class="posts__heading">
+    <h2 class="posts__heading-title">FESZTIVÁLOK - KONCERTEK</h2>
+    <figure class="posts__heading-subtitle">
+      <blockquote class="posts__heading-quote">
+        "Music is the answer"
+      </blockquote>
+      <figcaption class="posts__heading-quote-caption">Mc Dynamite</figcaption>
+    </figure>
   </div>
-  <article class="post__markdown">{{ content | safe }}</article>
+  <article class="posts__markdown">{{ content | safe }}</article>
 </div>
