--- a/src/_includes/posts_corporate.html
+++ b/src/_includes/posts_corporate.html
@@ -1,12 +1,18 @@
 ---
 layout: default
-title: KONFERENCIÁK – TRÉNINGEK – VÁLLALATI RENDEZVÉNYEK
-<!-- kep: image -->
 ---
 
-<div class="post__body">
-  <div class="post__content">
-    <h2 class="post__heading">{{title}}</h2>
+<div class="posts__body">
+  <div class="posts__heading">
+    <h2 class="posts__heading-title">
+      KONFERENCIÁK - TRÉNINGEK - VÁLLALATI RENDEZVÉNYEK
+    </h2>
+    <figure class="posts__heading-subtitle">
+      <blockquote class="posts__heading-quote">
+        "Inkább pénzt veszítsek, mint bizalmat."
+      </blockquote>
+      <figcaption class="posts__heading-quote-caption">Robert Bosch</figcaption>
+    </figure>
   </div>
-  <article class="post__markdown">{{ content | safe }}</article>
+  <article class="posts__markdown">{{ content | safe }}</article>
 </div>
