--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -41,7 +41,8 @@ h1 {
   line-height: 6rem;
   letter-spacing: -0.015em;
   color: var(--font-orange);
-  padding-right: 2rem;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -51,7 +52,8 @@ h2 {
   line-height: 3rem;
   letter-spacing: -0.015em;
   color: var(--font-orange);
-  padding-right: 2rem;
+  margin: 0;
+  padding: 0;
 }
 
 h3 {
@@ -61,16 +63,32 @@ h3 {
   line-height: 3rem;
   letter-spacing: -0.015em;
   color: var(--font-orange);
-  padding-right: 2rem;
+  margin: 0;
+  padding: 0;
 }
 
-p {
+p,
+figcaption {
   font-style: normal;
   font-weight: 600;
   font-size: 1.4rem;
   line-height: 2rem;
   letter-spacing: -0.015em;
   color: var(--font-grey);
+}
+
+blockquote {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 2rem;
+  letter-spacing: -0.015em;
+  color: var(--font-grey);
+}
+
+figure {
+  padding: 0;
+  margin: 0;
 }
 
 .aboutus__text--en > p,
@@ -334,10 +352,10 @@ form > * {
 .contact__content {
   max-width: 128rem;
   margin: auto;
+  padding-top: 3vh;
 }
 
 .contact__heading {
-  padding-top: 3rem;
   margin: 0;
   text-align: center;
 }
@@ -541,6 +559,7 @@ form > * {
   display: flex;
   flex-direction: column;
   margin: auto;
+  padding-top: 3vh;
 }
 .refs__heading {
   text-align: center;
@@ -560,7 +579,11 @@ form > * {
 .refs__link {
 }
 .refs__img {
+  object-fit: contain;
   width: 100%;
+  height: 50vh;
+  min-height: 20rem;
+  max-height: 30rem;
 }
 .refs__item-heading {
   padding: 0;
@@ -572,21 +595,35 @@ form > * {
     flex-wrap: wrap;
   }
 }
+
+/* POSTS - COLLECTION*/
+
 .posts__body {
   max-width: 128rem;
   display: flex;
   flex-direction: column;
   margin: auto;
   align-items: center;
-}
-.posts__content {
-  align-self: center;
+  padding-top: 3vh;
 }
 .posts__heading {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  padding: 0;
 }
+.posts__heading-title {
+}
+.posts__heading-subtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.posts__heading-quote {
+}
+.posts__heading-quote-caption {
+}
+
+/* POST - SINGLE*/
 
 .post__body {
   max-width: 128rem;
