--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -576,6 +576,12 @@ form > * {
   width: 100%;
   min-width: 10rem;
 }
+.refs__item:hover,
+.refs__item:focus {
+  transition: all 0.5s ease-out;
+  transform: scale(1.02);
+  filter: drop-shadow(0px 0px 6px var(--font-orange));
+}
 .refs__link {
 }
 .refs__img {
@@ -612,6 +618,7 @@ form > * {
   align-items: center;
 }
 .posts__heading-title {
+  text-align: center;
 }
 .posts__heading-subtitle {
   display: flex;
@@ -622,24 +629,103 @@ form > * {
 }
 .posts__heading-quote-caption {
 }
+.posts__content {
+  padding: 3vh 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.posts__card {
+  min-width: 30rem;
+  max-width: 40rem;
+  width: 30vw;
+  aspect-ratio: 16/9;
+  padding: 0.3rem;
+  background-color: var(--bg-dark);
+  border-radius: 3px;
+  margin: 1rem;
+}
+
+.posts__card:hover,
+.posts__card:focus {
+  transition: all 0.5s ease-out;
+  transform: scale(1.02);
+  filter: drop-shadow(0px 0px 6px var(--font-orange));
+}
+.posts__link {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.posts__image-cover {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  margin: 0;
+  padding: 0;
+}
+.posts__image-caption {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: var(--bg-dark);
+}
 
 /* POST - SINGLE*/
 
-.post__body {
-  max-width: 128rem;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  align-items: center;
-}
 .post__content {
-  align-self: center;
-}
-.post__heading {
+  max-width: 128rem;
+  padding: 3vh 0;
   display: flex;
-  align-items: center;
-  padding: 0;
+  flex-direction: column-reverse;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: auto;
 }
-.posts__image {
-  width: 20vw;
+.post__scroller {
+  align-self: center;
+  max-width: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 20rem;
+  background-color: var(--bg-dark);
+  padding: 0.3rem;
+  margin: 3vh 0;
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+  scroll-snap-type: inline mandatory;
+  scroll-padding-inline: 2rem;
+  scrollbar-color: var(--font-orange), var(--font-grey);
+  scrollbar-width: thin;
 }
+.post__card {
+  display: grid;
+  grid-template-rows: min-content;
+  inline-size: min(100% - 0.5rem, 100%);
+  margin-inline: auto;
+  scroll-snap-align: start;
+}
+.post__image {
+  inline-size: 99%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+}
+
+.post__image-selected {
+  align-self: center;
+  min-height: 45vh;
+  max-height: 73vh;
+  width: 90%;
+  object-fit: contain;
+}
+
+/* .post__scroller::-webkit-scrollbar {
+  height: 10px;
+}
+.post__scroller::-webkit-scrollbar-track {
+  height: 10px;
+}
+.post__scroller::-webkit-scrollbar-thumb {
+  height: 10px;
+} */
