--- a/src/_includes/galleryLayout_festival.html
+++ b/src/_includes/galleryLayout_festival.html
@@ -3,27 +3,34 @@ layout: default
 ---
 
 <!-- prettier-ignore -->
-<section class="post__body">
-  {% set postlist = collections.festival %} 
-  {% for post in postlist %}
-
+<section class="post__content">
+<div class="post__scroller">
   
-  {% set images = post.data.galleryImages %} 
-  {% for image in images %}
+    {% set postlist = collections.festival %}
+    {% for post in postlist %}
   
-
-  <div class="post__content">
-    <a href="{{image}}"><img src="{{image}}" class="post__image" alt="" /></a>
-  </div>
+    {% set images = post.data.galleryImages %}
+    {% for image in images %}
   
+    {% if page.url == post.url %}
   
-  {% endfor %}
-
-
-  {% endfor %} 
+    <div class="post__card">
+      <img src="{{image}}" class="post__image" alt="" />
+    </div>
   
+    {% endif %}
   
+    {% endfor %}
   
-
-
+    {% endfor %}
+  
+</div>
 </section>
+<script>
+  let postBody = document.getElementsByClassName("post__content").item(0);
+  let src = document.getElementsByClassName("post__image").item(0).currentSrc;
+  let img = document.createElement("img");
+  img.src = src;
+  img.className = "post__image-selected";
+  postBody.appendChild(img);
+</script>
