mobile manu ready

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -25,7 +25,7 @@
       {% include "./partials/footer.html" %}
     </div>
 
-    <script src="/static/js/alpine.js"></script>
+    <script src="/static/js/ui.js"></script>
 
     {% if path == "home" %}
     <!-- Netlify Identity Widget -->
