--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -209,6 +209,7 @@ nav-menu__conteiner {
     padding: 0;
     background-color: var(--bg-dark);
     border-top: 1px solid var(--bg-mid);
+    height: 0;
   }
   .nav__list-item:last-of-type {
     border-bottom: 1px solid var(--bg-mid);
@@ -228,13 +229,13 @@ nav-menu__conteiner {
     display: block;
     height: 100%;
     width: 100%;
-    padding: 2.5rem;
+    padding: 2.5rem 0;
   }
 
   .nav-menu__conteiner {
     position: absolute;
-    align-self: end;
-    order: -1;
+    top: 0;
+    right: 5px;
   }
   .nav__button {
     display: block;
@@ -788,4 +789,6 @@ nav-menu__conteiner {
 
 .show {
   display: block;
+  height: initial;
+  transition: all 1s ease-out;
 }
