--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -138,6 +138,7 @@ form > * {
   height: 90px;
   display: flex;
   justify-content: space-between;
+  transition: all 0.3s ease-out;
 }
 
 .nav__logo-warper {
@@ -175,7 +176,7 @@ form > * {
 }
 .nav__button {
   display: none;
-  background-color: var(--bg-dark);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 nav-menu__conteiner {
@@ -792,4 +793,13 @@ nav-menu__conteiner {
   display: block;
   height: initial;
   transition: all 1s ease-out;
+}
+
+.navUp {
+  height: 0;
+  transition: all 0.3s ease-out;
+}
+
+.navHide {
+  display: none;
 }
