--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -110,7 +110,7 @@ body {
   background-color: var(--bg-mid);
   overflow-x: hidden;
   scroll-behavior: smooth;
-  overscroll-behavior: contain;
+  overscroll-behavior: none;
 }
 
 button,
