--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -102,10 +102,10 @@ figure {
 
 /* LAYOUT */
 html {
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   overscroll-behavior-y: none;
   overscroll-behavior-block: none;
-  -webkit-overflow-scrolling: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
