--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -363,6 +363,7 @@ nav-menu__conteiner {
   padding: 0;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 .aboutus__image-wrapper {
   padding-top: 3vh;
@@ -377,12 +378,14 @@ nav-menu__conteiner {
 .aboutus__text-container--hu,
 .aboutus__text-container--en {
   padding: 3rem;
+  padding-top: 0;
   width: 80vw;
   max-width: 80rem;
   overflow: hidden;
 }
 .aboutus__language-picker {
-  padding-bottom: 3rem;
+  text-align: center;
+  /* padding-bottom: 3rem; */
 }
 .aboutus__language-picker > p {
   display: inline-block;
@@ -400,14 +403,12 @@ nav-menu__conteiner {
 
 .hu-sw:hover,
 .hu-sw:focus {
-  color: var(--font-orange);
   transition: all 0.5s ease-out;
   transform: scale(1.1);
   filter: drop-shadow(0px 0px 6px var(--font-orange));
 }
 .en-sw:hover,
 .en-sw:focus {
-  color: var(--font-orange);
   transition: all 0.5s ease-out;
   transform: scale(1.1);
   filter: drop-shadow(0px 0px 6px var(--font-orange));
