--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -374,6 +374,7 @@ nav-menu__conteiner {
   padding: 0;
   width: 70vw;
   max-width: 45rem;
+  border-radius: 2px;
 }
 .aboutus__text-container--hu,
 .aboutus__text-container--en {
@@ -476,10 +477,16 @@ nav-menu__conteiner {
   padding: 0.5rem 0;
   width: 100%;
   height: fit-content;
+  outline: none;
+  border: none;
+  border-radius: 2px;
 }
 .form__item > input {
   height: 3rem;
   width: 98%;
+  outline: none;
+  border: none;
+  border-radius: 2px;
 }
 .form__item > *::placeholder {
   font-family: "Open Sans", sans-serif;
@@ -496,10 +503,10 @@ nav-menu__conteiner {
 #form__message--input:focus,
 #form__message--input:active,
 #form__message--input::selection {
-  outline-color: var(--font-orange) !important;
-  outline-style: solid !important;
-  border-style: solid !important;
-  outline-width: 2px;
+  outline: none;
+  transition: all 0.5s ease-out;
+  transform: scale(1.01);
+  filter: drop-shadow(0px 0px 6px var(--font-orange));
 }
 #form__message--input {
   font-family: "Open Sans", sans-serif;
@@ -514,7 +521,9 @@ nav-menu__conteiner {
   line-height: 2rem;
   letter-spacing: -0.015em;
   width: 98%;
-  outline-width: 2px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
 }
 
 .form__submit {
@@ -553,6 +562,7 @@ nav-menu__conteiner {
 .map__container > iframe {
   width: 100%;
   height: 100%;
+  border-radius: 2px;
 }
 .contact__card-conatainer {
   margin: auto;
@@ -605,6 +615,7 @@ nav-menu__conteiner {
 .card__img {
   padding: 0;
   width: 100%;
+  border-radius: 2px;
 }
 
 .card__heading {
