--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -484,8 +484,7 @@ nav-menu__conteiner {
 .form__item:last-of-type {
   text-align: center;
   padding: 0;
-  margin: 0;
-  background-color: rgb(249, 249, 249);
+  margin: 35px;
 }
 .form__item > input {
   height: 3rem;
