--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -770,20 +770,20 @@ nav-menu__conteiner {
   max-width: 128rem;
   padding: 3vh 0;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: center;
   gap: 0.5rem;
-  margin: auto;
+  margin: 0 auto;
 }
 .post__scroller {
-  align-self: center;
+  bottom: 10px;
   max-width: 100%;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 20rem;
   background-color: var(--bg-dark);
   padding: 0.3rem;
-  margin: 3vh 0;
+  margin: 3vh auto;
   overflow-x: auto;
   overflow-y: hidden;
   overscroll-behavior-inline: contain;
@@ -791,7 +791,6 @@ nav-menu__conteiner {
   scroll-padding-inline: 2rem;
   scrollbar-color: var(--font-orange), var(--font-grey);
   scrollbar-width: thin;
-  height: 100%;
 }
 .post__card {
   display: grid;
@@ -805,7 +804,21 @@ nav-menu__conteiner {
   aspect-ratio: 16/9;
   object-fit: cover;
 }
-
+.post__image-container {
+  display: flex;
+  margin: auto;
+  height: 70vh;
+}
+.post__image-container > button {
+  background-color: var(--bg-mid);
+  color: var(--font-dark-grey);
+  width: 3rem;
+  font-size: xx-small;
+  transform: scale(1, 5);
+  overflow: hidden;
+  height: 1rem;
+  margin: auto;
+}
 .post__image-selected {
   align-self: center;
   min-height: 45vh;
@@ -855,4 +868,17 @@ nav-menu__conteiner {
 .succesMessage {
   text-align: center;
   margin-top: 10vh;
+}
+
+.selectedImage {
+  transition: all 0.5s ease-out;
+  transform: scale(1.02);
+  filter: drop-shadow(0px 0px 6px var(--font-orange));
+}
+
+.maxi {
+  z-index: 200;
+  transition: all 0.5s ease-out;
+  transform: scale(2);
+  object-fit: cover;
 }
